# smartspeaker_a5

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  partitions_smart_speaker.csv  sdkconfig  sdkconfig.defaults
components/bt_sink/: Kconfig.projbuild
components/led_volume_ding/: CMakeLists.txt
components/radio/: CMakeLists.txt  radio.c
goertzel/components/audio_analyser/: audio_analyser.c
goertzel/components/goertzel_filter/: CMakeLists.txt
goertzel/components/lcd/: CMakeLists.txt  Kconfig.projbuild
goertzel/components/led_controller_commands/: CMakeLists.txt  led_controller_commands.c
goertzel/components/radio/: radio.c
goertzel/components/sntp-mod/: CMakeLists.txt
goertzel/components/wifi/: CMakeLists.txt  Kconfig.projbuild
goertzel/main/: smart_speaker.c  state.h
ledcontroller/: CMakeLists.txt  sdkconfig.defaults
ledcontroller/components/strip_effects/: CMakeLists.txt  strip_effects.c
ledcontroller/main/: main.c
main/: CMakeLists.txt  smart_speaker.c
smartspeaker/: .clangd  partitions_smart_speaker.csv  sdkconfig.defaults
smartspeaker/components/audio_analyser/: CMakeLists.txt  audio_analyser.c
smartspeaker/components/bt_sink/: CMakeLists.txt  Kconfig.projbuild
smartspeaker/components/goertzel_filter/: CMakeLists.txt
smartspeaker/components/hue/: CMakeLists.txt  Kconfig.projbuild  hue.c
smartspeaker/components/lcd/: CMakeLists.txt  Kconfig.projbuild
smartspeaker/components/led_controller_commands/: Kconfig.projbuild  (+1 more)
smartspeaker/main/: Kconfig.projbuild  smart_speaker.c  state.h
speakerc/: CMakeLists.txt  main.c
(+39 files in other folders)
